--- a/nuweb/CMData.tex
+++ b/nuweb/CMData.tex
@@ -662,7 +662,7 @@ to indicate clusters.
 \mbox{}\verb@#'@{\tt @}\verb@details For \bold{mg.MixMult}: the \code{param} list should be \code{list(q=...,m=...)}, @\\
 \mbox{}\verb@#'in which the vector of mixture probabilities \code{q} and the matrix \code{m}@\\
 \mbox{}\verb@#' of logit-transformed means of each component are passed.@\\
-\mbox{}\verb@#'For a \emph{K}-variate multinomial, the matrix{m} should have \emph{K-1} columns@\\
+\mbox{}\verb@#'For a \emph{K}-variate multinomial, the matrix \code{m} should have \emph{K-1} columns@\\
 \mbox{}\verb@#' and \code{length(q)} rows.@\\
 \mbox{}\verb@#'@\\
 \mbox{}\verb@#'@{\tt @}\verb@export@\\
